[project]
name = "topaz-photo"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/leoleelxh/Comfy-Topaz-Photo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "leoleexh"
DisplayName = "Comfy-Topaz-Photo"
Icon = ""
