[project]
name = "Comfy-Topaz-Photo"
description = "A ComfyUI node for integrating Topaz Photo AI's powerful image enhancement capabilities"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/leoleelxh/Comfy-Topaz-Photo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "leoleexh"
DisplayName = "Comfy-Topaz-Photo"
Icon = ""
